<resources>
    <string name="app_name">Ладушкины сказки</string>
    <string name="header_app">Ладушкины сказки</string>
    <string name="category_name">Категория</string>
    <string name="name_skazka">Название сказки</string>
    <string name="description_skazka">Описание сказки</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="body_skazka">Текст сказки</string>
    <string name="btn_go_snake">🌟 МИНИ-ИГРА 🌟</string>
    <string name="txt_snake">Долгий путь в кроватку…</string>
    <string name="comment_interactive">здесь можешь рассказать\nо себе, о рисунке, о чём угодно!</string>
    <string name="description_button_menu">button menu</string>
    <string name="description_button_play_up">button play up</string>
    <string name="description_button_play_down">button play down</string>
    <string name="description_button_play_left">button play left</string>
    <string name="description_button_play_right">button play right</string>
    <string name="description_button_play_play_pause">button play pause or play</string>
    <string name="description_icon_logo">icon logo</string>
    <string name="txt_text_sk">
        Автор сказок: Лада Светочева\n
        Иконки, звёздный фон:\n
        https://www.freepik.com\n
        Наш e-mail:
    </string>
    <string name="txt_text_feedback">
        Будем рады Вашим отзывам!\n
        Автор сказок так-же на связи 😊\n
        Наш e-mail:
    </string>
    <string name="txt_address_email"><u>sonne-34@yandex.ru</u></string>
    <string name="txt_feedback_here">или напишите нам прямо здесь:</string>
    <string name="txt_your_name">Ваше имя</string>
    <string name="txt_your_feedback">Ваш отзыв / пожелание\n(обязательное поле)</string>
    <string name="txt_contact">Ваш телефон, e-mail или др.\n (необязательно поле)</string>
    <string name="send">Отправить</string>
    <string name="close">Закрыть</string>
    <string name="description_image_sk">Картинка для сказки</string>
    <string name="txt_header_interactive">Художественная галерея\nвдохновлённых людей</string>
    <string name="btn_add_interactive">добавить работу</string>
    <string name="txt_header_interactive_add">Ты любишь рисовать?\nОтправь нам рисунок, и мы добавим его в галерею!</string>
    <string name="description_image_choice">Выбор рисунка из галереи устройства</string>
    <string name="edt_name">имя</string>
    <string name="edt_year">возраст</string>
    <string name="btn_gallery">💫 Художественная галерея 💫</string>
    <string name="description_category_skazka">Картинка катеории сказок</string>
    <string name="txt_category">Название категории</string>
    <string name="txt_description_category">Описание категории</string>
    <string name="txt_name_author">Имя художника</string>
    <string name="txt_year_item">, 0</string>
    <string name="description_image_interactive">Рисунок</string>
    <string name="description_new_skazka">Новая сказка</string>
    <string name="description_view_skazka">Иконка просмотрена ли сказка</string>
    <string name="description_like_skazka">Иконка \"нравится сказка\"</string>
    <string name="btn_new">✨ Новинки ✨</string>
    <string name="description_question">Правила игры</string>
    <string name="description_btn_music">Включение/отключение музыки</string>
    <string name="description_btn_sound">Включение/отключение звуков</string>
    <string name="about_us">О нас</string>
    <string name="txt_menu_feedback">Оставить отзыв</string>
    <string name="txt_dialog_star">*контактные данные нужно указывать только при случае, если Вы хотите, чтобы мы с Вами связались.</string>
    <string name="toast_empty_message">Ой, Вы совсем ничего не написали!)</string>
    <string name="toast_thanks">Спасибочки!</string>
    <string name="toast_check_network">Проверьте подключение к интернету</string>
    <string name="toast_error_send_feedback">Что-то пошло не так, попробуйте повторить отправку позже</string>
    <string name="checked_empty">Обязательное поле</string>
    <string name="toast_error_image">Прикрепите изображение</string>
    <string name="toast_fail">Упс! Произошла ошибка: %s</string>
    <string name="dialog_send_title_add_interactive">Отправить художество?</string>
    <string name="dialog_send_title_on_susses">Большое спасибо!</string>
    <string name="dialog_send_message_on_susses">"Мы проверим корректность художества, затем добавим его в галерею!"</string>
    <string name="dialog_great">Отлично!</string>
    <string name="dialog_yes">Да!</string>
    <string name="dialog_no">Ой, Нет!</string>
    <string name="tv_send_progress">Отправка художества…</string>
    <string name="toast_wait_load">Пожалуйста, дождитесь завершения загрузки Вашего художества…</string>
    <string name="dialog_close_app">Закрыть приложение?</string>
</resources>