<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/blackTrans"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/txt_text_menu_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/font_lobster"
            android:gravity="center"
            android:text="@string/txt_text_feedback"
            android:textColor="@color/yellowLight"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_email_address_menu_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/font_lobster"
            android:gravity="center"
            android:text="@string/txt_address_email"
            android:textColor="@color/yellowLight"
            android:textIsSelectable="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_header_menu_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/font_lobster"
            android:gravity="center"
            android:text="@string/txt_feedback_here"
            android:textColor="@color/yellowLight"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_name_menu_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:autofillHints=""
            android:background="@drawable/round_top_white"
            android:fontFamily="@font/font_first_time_writing"
            android:gravity="center"
            android:hint="@string/txt_your_name"
            android:inputType="textMultiLine"
            android:maxHeight="50dp"
            android:minHeight="50dp"
            android:padding="7dp"
            android:textColor="@color/blackTrans"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_feedback_menu_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="8dp"
            android:autofillHints=""
            android:background="@color/white"
            android:fontFamily="@font/font_first_time_writing"
            android:gravity="center"
            android:hint="@string/txt_your_feedback"
            android:inputType="textMultiLine"
            android:maxHeight="200dp"
            android:minHeight="70dp"
            android:padding="7dp"
            android:textColor="@color/blackTrans"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_contact_menu_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:autofillHints=""
            android:background="@drawable/round_bottom_white"
            android:fontFamily="@font/font_first_time_writing"
            android:gravity="center"
            android:hint="@string/txt_contact"
            android:inputType="textEmailAddress"
            android:maxHeight="100dp"
            android:minHeight="50dp"
            android:padding="7dp"
            android:textColor="@color/blackTrans"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/font_lobster"
            android:gravity="center"
            android:text="@string/txt_dialog_star"
            android:textColor="@color/yellowLight"
            android:textIsSelectable="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/img_btn_send_menu_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_button_green_light"
            android:fontFamily="@font/font_lobster"
            android:gravity="center"
            android:paddingHorizontal="32dp"
            android:paddingVertical="10dp"
            android:text="@string/send"
            android:textColor="@color/yellowLight"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btn_close_menu_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:background="@drawable/round_button_red_light"
            android:fontFamily="@font/font_lobster"
            android:gravity="center"
            android:paddingHorizontal="32dp"
            android:paddingVertical="10dp"
            android:text="@string/close"
            android:textColor="@color/yellowLight"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>