<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginHorizontal="40dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">


        <ImageView
            android:id="@+id/img_icon_menu_dialog"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_logo_trans"
            android:contentDescription="@string/description_icon_logo"
            android:gravity="center" />

        <TextView
            android:id="@+id/txt_text_menu_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/font_lobster"
            android:gravity="center"
            android:text="@string/txt_text_sk"
            android:textColor="@color/yellowLight"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_email_address_menu_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/font_lobster"
            android:gravity="center"
            android:text="@string/txt_address_email"
            android:textColor="@color/yellowLight"
            android:textIsSelectable="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_close_menu_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/font_lobster"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/close"
            android:textColor="@color/yellowLight" />

    </LinearLayout>
</ScrollView>