<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.snakeActivity.SnakeActivity">

    <TextView
        android:id="@+id/txt_header_snake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blackTrans"
        android:fontFamily="@font/font_first_time_writing"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/txt_snake"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icQuestion"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/round_button_blue"
        android:contentDescription="@string/description_question"
        android:padding="3dp"
        android:src="@drawable/ic_query"
        app:layout_constraintBottom_toTopOf="@+id/container_game"
        app:layout_constraintEnd_toStartOf="@+id/icMusic"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_header_snake" />

    <ImageView
        android:id="@+id/icMusic"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/round_button_orange"
        android:contentDescription="@string/description_btn_music"
        android:padding="10dp"
        android:src="@drawable/ic_music_off"
        app:layout_constraintBottom_toTopOf="@+id/container_game"
        app:layout_constraintEnd_toStartOf="@+id/icSound"
        app:layout_constraintStart_toEndOf="@+id/icQuestion"
        app:layout_constraintTop_toBottomOf="@+id/txt_header_snake" />

    <ImageView
        android:id="@+id/icSound"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/round_button_green"
        android:contentDescription="@string/description_btn_sound"
        android:padding="10dp"
        android:src="@drawable/ic_sound_off"
        app:layout_constraintBottom_toTopOf="@+id/container_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icMusic"
        app:layout_constraintTop_toBottomOf="@+id/txt_header_snake" />

    <FrameLayout
        android:id="@+id/container_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="10dp"
        android:background="@drawable/background_snake"
        app:layout_constraintBottom_toTopOf="@id/icUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_header_snake" />

    <ImageView
        android:id="@+id/icUp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button_blue"
        android:contentDescription="@string/description_button_play_up"
        android:src="@drawable/ic_up"
        app:layout_constraintBottom_toTopOf="@+id/icLeft"
        app:layout_constraintEnd_toStartOf="@+id/icRight"
        app:layout_constraintStart_toEndOf="@+id/icLeft" />

    <ImageView
        android:id="@+id/icLeft"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/round_button_purple"
        android:contentDescription="@string/description_button_play_left"
        android:rotation="-90"
        android:src="@drawable/ic_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/icUp" />

    <ImageView
        android:id="@+id/icRight"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/round_button_green"
        android:contentDescription="@string/description_button_play_right"
        android:rotation="90"
        android:src="@drawable/ic_up"
        app:layout_constraintBottom_toTopOf="@+id/icDown"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@id/icUp" />

    <ImageView
        android:id="@+id/icDown"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_button_orange"
        android:contentDescription="@string/description_button_play_down"
        android:rotation="180"
        android:src="@drawable/ic_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/icRight"
        app:layout_constraintStart_toEndOf="@+id/icLeft"
        app:layout_constraintTop_toBottomOf="@+id/icRight" />

    <View
        android:id="@+id/view"
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_game" />

    <ImageView
        android:id="@+id/icPause"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/round_button_red"
        android:contentDescription="@string/description_button_play_play_pause"
        android:padding="17dp"
        android:src="@drawable/ic_pause"
        app:layout_constraintBottom_toBottomOf="@+id/icUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/icUp" />

    <ImageView
        android:id="@+id/icSpeed"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/round_button_yellow"
        android:contentDescription="@string/description_button_play_play_pause"
        android:padding="15dp"
        android:src="@drawable/ic_speed_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/icPause" />

</androidx.constraintlayout.widget.ConstraintLayout>