<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackTrans"
    android:fadeScrollbars="false"
    android:scrollbarStyle="insideInset"
    android:scrollbarThumbVertical="@drawable/scrollview_thumb"
    android:scrollbarTrackVertical="@drawable/vertical_scrollview_track">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blackTrans"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_body_skazka"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/background_image"
            android:contentDescription="@string/description_image_sk" />

        <TextView
            android:id="@+id/txt_name_body_skazka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_serif_italic"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/name_skazka"
            android:textColor="@color/yellowLight"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_body_skazka"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/font_serif_italic"
            android:lineSpacingMultiplier="1.5"
            android:padding="10dp"
            android:text="@string/body_skazka"
            android:textColor="@color/yellowLight2"
            android:textSize="14sp" />

    </LinearLayout>

</ScrollView>