<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    android:background="@color/blackTrans">

    <ImageView
        android:id="@+id/img_interactive_item"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/description_image_interactive"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_name_interactive_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_first_time_writing"
        android:paddingStart="7dp"
        android:paddingTop="7dp"
        android:paddingEnd="0dp"
        android:paddingBottom="7dp"
        android:text="@string/txt_name_author"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_interactive_item" />

    <TextView
        android:id="@+id/txt_year_interactive_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_first_time_writing"
        android:paddingStart="0dp"
        android:paddingTop="7dp"
        android:paddingEnd="7dp"
        android:paddingBottom="7dp"
        android:text="@string/txt_year_item"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txt_name_interactive_item"
        app:layout_constraintTop_toBottomOf="@+id/img_interactive_item" />

    <TextView
        android:id="@+id/txt_comment_interactive_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_first_time_writing"
        android:padding="7dp"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name_interactive_item" />

</androidx.constraintlayout.widget.ConstraintLayout>